<resources>
  <string name="app_name">BuyStuff</string>
  <string name="product_name">Product Name</string>
  <string name="name">Name</string>
  <string name="input_product_name">Input Product Name</string>
  <string name="placeholder_image">Placeholder image for the BuyStuff application main activity</string>
  <string name="order_form">Order Form</string>
  <string name="username">Username</string>
  <string name="save">Save</string>
  <string name="settings_button">Navigate to settings page</string>
  <string name="no_product_name">No Product</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="blank_product_name">Blank Product Name</string>
  <string name="add_product">Add Product</string>
  <string name="product_description">Description</string>
  <string name="product_description_multi_line">Product Description</string>
  <string name="product_category_select">Select Product Category</string>
  <string name="product_contact_select">Select Product Contact</string>
  <string name="sign_up">Sign Up</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="submit">Submit</string>
  <string name="verify_account">Verify Account</string>
  <string name="verification_number">Verifiation Code</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
    <string name="add_product_image">Product Image</string>
  <string name="product_image">Image for product being viewed</string>
    <string name="announce">Announce</string>
  <string name="announce_description">Announce name of the product being viewed</string>
</resources>
