<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.OrderFormActivity">

  <TextView
    android:id="@+id/OrderFormActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/order_form"
    android:textColor="@color/black"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/OrderFormProductNameTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="@string/product_name"
    android:textColor="#000000"
    android:textSize="20sp"
    app:layout_constraintStart_toEndOf="@+id/OrderFormActivityProductImageView"
    app:layout_constraintTop_toTopOf="@+id/OrderFormActivityProductImageView" />

  <ImageView
    android:id="@+id/OrderFormActivityProductImageView"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="40dp"
    android:contentDescription="@string/product_image"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/OrderFormActivity"
    app:srcCompat="@drawable/ic_launcher_background"
    tools:ignore="ImageContrastCheck" />

  <Button
    android:id="@+id/OrderFormActivityAnnounceProductNameButton"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginTop="8dp"
    android:contentDescription="@string/announce_description"
    android:text="@string/announce"
    app:layout_constraintStart_toStartOf="@+id/OrderFormProductNameTextView"
    app:layout_constraintTop_toBottomOf="@+id/OrderFormProductNameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
