<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/MainActivityProductNameTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:text="@string/product_name"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@+id/MainActivityProductNameInputTextView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/MainActivityUsernameTextView" />

  <EditText
    android:id="@+id/MainActivityProductNameInputTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/input_product_name"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintStart_toStartOf="@+id/MainActivityProductNameTextView"
    app:layout_constraintTop_toBottomOf="@+id/MainActivityProductNameTextView" />

  <Button
    android:id="@+id/MainActivityMoveToOrderFormButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:text="@string/order_form"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/MainActivityProductNameInputTextView"
    app:layout_constraintTop_toTopOf="@+id/MainActivityProductNameInputTextView" />

  <Button
    android:id="@+id/MainActivityMoveToAddProductButton"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginBottom="40dp"
    android:text="@string/add_product"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/MainActivitySettingsButton"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:background="#474747"
    android:contentDescription="@string/settings_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@android:drawable/ic_menu_manage" />

  <TextView
    android:id="@+id/MainActivityUsernameTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/username"
    android:textColor="#000000"
    android:textSize="34sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/MainActivitySettingsButton" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/MainActivityProductRecyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="24dp"
    app:layout_constraintBottom_toTopOf="@+id/MainActivityMoveToAddProductButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/MainActivityProductNameInputTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
